loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:1: error: Missing closing brace `}' assumed here
var comp:Int= 0
^Poucet2:4: error: ';' expected but '{' found.
}while (!crossing()){
                    ^